--- a/public/assets/css/new_reservation.css
+++ b/public/assets/css/new_reservation.css
@@ -1,3 +1,7 @@
+#new_reservation .row {
+  margin-left: 0;
+  margin-right: 2px; }
+
 .alert {
   position: fixed;
   width: 100%;
@@ -132,9 +136,7 @@ label {
   border-radius: .13333em;
   padding: 2vh 0.36667em 0 0;
   margin-bottom: 0.5em;
-  position: relative;
-  margin-left: -10px;
-  margin-right: -8px; }
+  position: relative; }
 
 [id^="total_guest_"] {
   font-size: 1.1em;
@@ -162,14 +164,13 @@ label {
 
 [id^="guests_date_"] {
   border: 1px solid #b7b7b7;
-  margin-top: 2vh;
   position: relative;
-  margin-bottom: 0.5em; }
+  margin: 2vh 2px 0.5em 0; }
 
 .hide-guest {
   display: block;
   position: relative;
-  top: -15px;
+  top: -13px;
   left: 4px;
   height: 39px;
   padding: 0px 9px;
@@ -264,6 +265,9 @@ label {
 .datepicker table tr td.active {
   background-color: #337ab7 !important;
   border-color: #2e6da4 !important; }
+.datepicker table tr th, .datepicker table tr td {
+  width: 40px !important;
+  height: 40px !important; }
 
 .jquery-hover-a {
   background-color: #b7282e !important;
