--- a/public/assets/scss/new_reservation.scss
+++ b/public/assets/scss/new_reservation.scss
@@ -275,6 +275,8 @@ label {
 }
 #reservationInfo {
   padding: 0 0 0.25em 0;
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
 #timeliner {
@@ -299,6 +301,12 @@ label {
             th, td {
                 width: 40px !important;
                 height: 40px !important;
+                hr {
+                    margin-top: 0;
+                    margin-bottom: 0;
+                    border: 0;
+                    border-top: 1px solid #33333369;
+                }
             }
         }
     }
