all reservations & edit reservation

--- a/public/assets/scss/all_reservation.scss
+++ b/public/assets/scss/all_reservation.scss
@@ -2,6 +2,7 @@
 [id^="all_reservations_"] {
   border: 1px solid $brand-danger;
   padding: 23px;
+    font-size: 16px;
 }
 .show_total_res {
   border: .13333em solid #b7b7b7;
