--- a/public/assets/scss/new_reservation.scss
+++ b/public/assets/scss/new_reservation.scss
@@ -1,5 +1,5 @@
 @import "bootstrap-variables";
-#new_reservation {
+#new_reservation, #edit_reservation {
     .row {
         margin-left: 0;
         margin-right: 2px;
